<resources>
    <string name="app_name">Semana09Firebase</string>
    <string name="valbtnlogin">INGRESAR</string>
    <string name="valbtnregister">REGISTRARSE</string>
    <string name="valtxtfullname">Full name</string>
    <string name="valtxtcountry">Country</string>
    <string name="valtxtemailregister">Email</string>
    <string name="valtxtpasswordregister">Password</string>
    <string name="valbtnsaveregister">SAVE</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_listado">Listado</string>
    <string name="menu_cliente">Cliente</string>
    <string name="menu_pokemon">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_room">Save DB</string>

    <string name="valetfirstname">First name </string>
    <string name="valetlastname">Last name</string>
    <string name="valetphonenumber">Phone Number</string>
    <string name="valbtnsearchpokemon">SEARCH</string>
</resources>